--- a/src/com/corionis/els/resources/controls_en_US.html
+++ b/src/com/corionis/els/resources/controls_en_US.html
@@ -123,6 +123,16 @@
             &bull; Tab, Shift-Tab, Ctrl-Tab, and Ctrl-Shift-Tab navigate panels.
         </td>
     </tr>
+    <tr colspan="2">
+        <td>
+            &bull; Editing text fields requires Enter or Tab to complete the change.
+        </td>
+    </tr>
+    <tr colspan="2">
+        <td>
+            &bull; Saving a dialog also saves its position, size, etc. Cancelling does not.
+        </td>
+    </tr>
     <tr>
         <td><br/></td> <td></td>
     </tr>
