--- a/src/com/corionis/els/resources/jobs_en_US.html
+++ b/src/com/corionis/els/resources/jobs_en_US.html
@@ -63,7 +63,7 @@ The options provided depend on the type of Task being defined.</p>
   <li>"Local subscriber" allows selection of a local subscriber from the list of libraries</li>
   <li>"Remote subscriber (Host, Internet)" allows selection of a remote subscriber connecting on the Host address</li>
   <li>"Remote subscriber (Listen, LAN)" allows selection of a remote subscriber connecting on the Listen address</li>
-  <li>"Remote subscriber (Custom)" allows entry of a remote subscriber connecting with a Custom host or IP address:port</li>
+  <li>"Remote subscriber (Custom)" allows entry of a remote subscriber connecting with a Custom server or IP address:port</li>
   <li>"Local Hint Tracker" enables Hint processing using the current ELS instance.</li>
   <li>"Remote Hint Server (Host, Internet)" enables Hint processing connecting on the Host address.</li>
   <li>"Remote Hint Server (Listen, LAN)" enables Hint processing connecting on the Listen Address.</li>
