--- a/src/com/corionis/els/resources/libraries_en_US.html
+++ b/src/com/corionis/els/resources/libraries_en_US.html
@@ -59,7 +59,7 @@
   <li id="opts">Listen<br/>
     Listen is the hostname:port or IP address:port listener operations use to listen for incoming connections. If not defined
     Host is used. This setting is used with NAT or port forwarding to route incoming traffic to an inside system on a LAN.
-    If it is the same IP as the host the port must be > +2 of the host port. Those two ports are used by the sftp component.</li>
+    If it is the same IP as the server the port must be > +2 of the server port. Those two ports are used by the sftp component.</li>
 
   <li id="opts">Time-out<br/>
     The number of minutes before a listen operation times-out and throws an error. A "heartbeat" is used during long
