--- a/deploy/changes.html
+++ b/deploy/changes.html
@@ -13,6 +13,14 @@
 
 <hr/>
 
+<h3>10 October 2025</h3>
+<ul>
+    <li>Added selection of an Email Server to Job Tasks Subscriber Listener and Hint Server for fault notifications.</li>
+    <li>Adjusted how fault notifications are handled.</li>
+    <li>Added System, Preferences, Appearance, Rounded edges option.</li>
+    <li>Updated the FlatLaf look 'n feel libraries to 3.6.2.</li>
+</ul>
+
 <h3>8 October 2025</h3>
 <ul>
     <li>Added a "Match Dates" checkbox in the Libraries tab, Bibliography, Libraries for back-up Operations.</li>
@@ -27,7 +35,7 @@
     <li>Added -M | --email option to specify an existing Email Server on the command line.</li>
     <li>Modified Browser delete actions with better focus and selection handling.</li>
     <li>Changed tooltip time-outs to 30 seconds.</li>
-</ul>S
+</ul>
 
 <h3>24 July 2025</h3>
 <ul>
