#83 Archiver Tool complete, see https://html-preview.github.io/?url=https://github.com/Corionis/ELS/blob/Version-4.1.0/build/changes.html

--- a/src/com/corionis/els/resources/formats_en_US.html
+++ b/src/com/corionis/els/resources/formats_en_US.html
@@ -49,6 +49,8 @@
     output string during formatting or matched against the input string
     during parsing.
 <p>
+    The default pattern is:&nbsp;&nbsp;&nbsp;&nbsp;<code>yyyy-MM-dd hh:mm:ss a</code>
+<p>
     The following pattern letters are defined (all other characters from
     <code>'A'</code> to <code>'Z'</code> and from <code>'a'</code> to
     <code>'z'</code> are reserved):
