--- a/src/com/corionis/els/resources/operations_en_US.html
+++ b/src/com/corionis/els/resources/operations_en_US.html
@@ -42,7 +42,7 @@
   </style>
 </head>
 <body>
-<h2>Operations</h2>
+<h2>Operations Tool</h2>
 
 <p>
   Operations define parameters and options for executing ELS in one of the various modes.
