--- a/src/com/corionis/els/resources/sleep_en_US.html
+++ b/src/com/corionis/els/resources/sleep_en_US.html
@@ -46,5 +46,11 @@ Scheduler.
 <h3>Sleep time</h3>
 The value is expressed in whole minutes.
 
+<br/>
+
+<center><h3>Example Task Sequencing</h3></center>
+<center><img src="https://corionis.github.io/ELS/assets/images/task-sequencing.png"><br/></center>
+<br/>
+
 </body>
 </html>
