--- a/src/com/corionis/els/resources/junkremover_en_US.html
+++ b/src/com/corionis/els/resources/junkremover_en_US.html
@@ -32,7 +32,7 @@
     </style>
 </head>
 <body>
-<h2>Junk Remover</h2>
+<h2>Junk Remover Tool</h2>
 This tool may be applied to:
 <ul>
     <li>Collection</li>
