--- a/src/com/corionis/els/resources/renamer_en_US.html
+++ b/src/com/corionis/els/resources/renamer_en_US.html
@@ -32,7 +32,7 @@
     </style>
 </head>
 <body>
-<h2>Renamer</h2>
+<h2>Renamer Tool</h2>
 This tool may be applied to:
 <ul>
     <li>Directory</li>
