#84 Cleanup Tool complete, see https://html-preview.github.io/?url=https://github.com/Corionis/ELS/blob/Version-4.1.0/build/changes.html

--- a/src/com/corionis/els/resources/archiver_en_US.html
+++ b/src/com/corionis/els/resources/archiver_en_US.html
@@ -40,12 +40,13 @@ This tool may be applied to:
     <li>Directory</li>
     <li>File</li>
 </ul>
-Works locally on the Publisher only.<br/>
+<i>Note:</i> There is no Dry-Run option for this tool.<br/><br/>
+Works locally on the Publisher only and requires a previous Task with a Publisher or a -p|-P option in command line.<br/>
 <br/>
 Named configurations may be executed:
 <ul>
-    <li>Using the Run button</li>
-    <li>Added as a Task in a Job</li>
+    <li>Using the Run button on the selection(s) in the Browser</li>
+    <li>Added as a Task in a Job on the defined Origins</li>
 </ul>
 
 <h3>Append Publisher & Subscriber</h3>
